--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 									
 									<div class="content">
 										<div class="gallery">
-											<a href="1.jpg" class="landscape"><img src="images/gallery/thumbs/1.jpg" alt="" /></a>
-											<a href="2.jpg"><img src="images/gallery/thumbs/2.jpg" alt="" /></a>
-											<a href="3.jpg"><img src="images/gallery/thumbs/3.jpg" alt="" /></a>
-											<a href="4.jpg" class="landscape"><img src="images/gallery/thumbs/4.jpg" alt="" /></a>
+											<a href="1.jpg" class="landscape"><img src="1.JPG" ></a>
+											<a href="2.jpg"><img src="2.JPG" ></a>
+											<a href="3.jpg"><img src="=3.JPG" ></a>
+											<a href="4.jpg" class="landscape"><img src="4.JPG"></a>
 										</div>
 									</div>
 								</section>
@@ -111,9 +111,9 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="5.jpg" class="landscape"><img src="images/gallery/thumbs/5.jpg" alt="" /></a>
-											<a href=" copy 2.jpeg"><img src="images/gallery/thumbs/ copy 2.jpeg" alt="" /></a>
-											<a href="7 copy 2.jpeg.jpg"><img src="images/gallery/thumbs/7 copy 2.jpeg" alt="" /></a>
+											<a href="5.jpg" class="landscape"><img src="5.JPG"></a>
+											<a href=" copy 2.jpeg"><img src="images/gallery/thumbs/ copy 2.jpeg" ></a>
+											<a href="7 copy 2.jpeg.jpg"><img src="images/gallery/thumbs/7 copy 2.jpeg"></a>
 										</div>
 									</div>
 								</section>
@@ -123,9 +123,9 @@
 									
 									<div class="content">
 										<div class="gallery">
-											<a href="8.jpg" class="portrait"><img src="images/gallery/thumbs/8.jpg" alt="" /></a>
-											<a href="9.jpg" class="portrait"><img src="images/gallery/thumbs/9.jpg" alt="" /></a>
-											<a href="010.jpg" class="landscape"><img src="images/gallery/thumbs/010.jpg" alt="" /></a>
+											<a href="8.jpg" class="portrait"><img src="8.JPG"></a>
+											<a href="9.jpg" class="portrait"><img src="9.JPG"></a>
+											<a href="010.jpg" class="landscape"><img src="010.JPG"></a>
 											<div class="content">
 												<br>
 												<h2><strong>contact</strong></h2> 
