--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 										<div class="gallery">
 											<a href="1.jpg" class="landscape"><img src="1.JPG" ></a>
 											<a href="2.jpg"><img src="2.JPG"></a>
-											<a href="images/fulls/3.JPG"><img src="=3.JPG"></a>
+											<a href="2.jpg"><img src="2.JPG"></a>
 											<a href="4.jpg" class="landscape"><img src="4.JPG"></a>
 										</div>
 									</div>
